# slogging

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.md  README.rst  bindep.txt  requirements.txt  setup.cfg  setup.py  stdeb.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
devstack/files/: log-processor.conf
devstack/files/cron.d/: swift-access-log-uploader  swift-container-stats-log-creator  swift-stats-log-creator  swift-stats-log-uploader  swift-stats-processor
devstack/lib/: slogging
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: build_debian_packages.rst  build_rpm_packages.rst  index.rst  install_debian_packages.rst  install_rpm_packages.rst  run_slogging_on_saio.rst
doc/source/user/: how_slogging_process_logs.rst  index.rst
slogging/: __init__.py  access_log_delivery.py  access_processor.py  common.py  compressing_file_reader.py  db_stats_collector.py  file_buffer.py  internal_proxy.py  log_common.py  log_processor.py  log_uploader.py  stats_processor.py
test/: sample.proxy-server.conf
test/speed/: test_cidr_speed.py
test/unit/: __init__.py  test_access_processor.py  test_db_stats_collector.py  test_log_common.py
test_slogging/speed/: test_cidr_speed.py
test_slogging/unit/: test_access_log_delivery.py  test_compressing_file_reader.py  test_internal_proxy.py  test_log_processor.py  test_log_uploader.py  test_stats_processor.py
