[metadata]
name = slogging
summary = Stats System for OpenStack Swift
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/slogging/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    slogging
data_files =
    etc =
        etc/access-log-delivery.conf-sample
        etc/log-processor.conf-sample
scripts =
    bin/swift-account-stats-logger
    bin/swift-container-stats-logger
    bin/swift-log-stats-collector
    bin/swift-log-uploader
    bin/swift-access-log-delivery

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[compile_catalog]
directory = locale
domain = slogging

[update_catalog]
domain = slogging
output_dir = slogging/locale
input_file = slogging/locale/slogging.pot

[extract_messages]
keywords = _ l_ lazy_gettext
mapping_file = babel.cfg
output_file = slogging/locale/slogging.pot